IDEA-286509 init LafManager in EDT before any other UI tasks
GitOrigin-RevId: 13d9be5d92b31c1577b090cef4ef792acfcf5d21